modified Jenkinsfile to remove the telegraf stages

--- a/carrier-io/Jenkinsfile
+++ b/carrier-io/Jenkinsfile
@@ -1,8 +1,8 @@
 STACK_NAME = "performance-testing-load-generators"
 MONITORING_STACK_NAME = "monitoring-performance-testing"
 
-def createStack(String loadGeneratorsCount, String instanceType, String spotPrice, String reportingInstanceUrl, String targetRegion, String lgMemory, String targetEnv){
-    sh(script: "aws cloudformation --profile ${targetEnv} create-stack --stack-name ${STACK_NAME} \
+def createStack(String loadGeneratorsCount, String instanceType, String spotPrice, String reportingInstanceUrl, String targetRegion, String lgMemory){
+    sh(script: "aws cloudformation create-stack --stack-name ${STACK_NAME} \
         --region ${targetRegion} \
         --template-body file://${WORKSPACE}/carrier-io/scripts/cloudformation/load_generator.yml \
         --parameters ParameterKey=InstanceType,ParameterValue=${instanceType} \
@@ -10,7 +10,7 @@ def createStack(String loadGeneratorsCount, String instanceType, String spotPric
         ParameterKey=LoadGeneratorsCount,ParameterValue=${loadGeneratorsCount} \
         ParameterKey=ReportingInstanceHost,ParameterValue=${reportingInstanceUrl} \
         ParameterKey=LoadGeneratorMemory,ParameterValue=${lgMemory}")
-    sh(script: "aws cloudformation --profile ${targetEnv} wait stack-create-complete --stack-name ${STACK_NAME} --region ${targetRegion}")
+    sh(script: "aws cloudformation wait stack-create-complete --stack-name ${STACK_NAME} --region ${targetRegion}")
 } 
 
 def populateData(String tenant){
@@ -21,12 +21,12 @@ def populateData(String tenant){
     sh(script: "[TBD]")
 }
 
-def deleteStack(String stackName, String targetRegion, String targetEnv){
-    sh(script: "aws cloudformation --profile ${targetEnv} delete-stack --stack-name ${stackName} --region ${targetRegion}")
-    sh(script: "aws cloudformation --profile ${targetEnv} wait stack-delete-complete --stack-name ${stackName} --region ${targetRegion}")
+def deleteStack(String stackName, String targetRegion){
+    sh(script: "aws cloudformation delete-stack --stack-name ${stackName} --region ${targetRegion}")
+    sh(script: "aws cloudformation wait stack-delete-complete --stack-name ${stackName} --region ${targetRegion}")
 }
 
-def executePerformanceTest(String users, String loadGeneratorsCount, String reportingInstanceUrl, String galloperPostProccessingTaskId, String testName, String testType, String rampUp, String duration, String targetUrl, String distribution, String targetEnv, String lgMemory, String artifact, String bucket, String tenant){
+def executePerformanceTest(String users, String loadGeneratorsCount, String reportingInstanceUrl, String galloperPostProccessingTaskId, String testName, String testType, String rampUp, String duration, String targetUrl, String distribution, String lgMemory, String artifact, String bucket, String tenant){
     def usersCount = Math.round((params.users.toInteger() / params.loadGeneratorsCount.toInteger()).floatValue())
     sh "docker pull getcarrier/control_tower:1.5 && docker run -t --rm \
         -e REDIS_HOST=${reportingInstanceUrl} \
@@ -40,41 +40,8 @@ def executePerformanceTest(String users, String loadGeneratorsCount, String repo
         -e DURATION=${duration} \
         -e additional_files='{\"tests/InfluxBackendListenerClient-1.1.jar\": \"/jmeter/apache-jmeter-5.0/lib/ext/InfluxBackendListenerClient.jar\"}' \
         -e artifact=${artifact} getcarrier/control_tower:1.5 \
-        -c getcarrier/perfmeter:1.5 -e '{\"cmd\": \"-n -t /mnt/jmeter/${testName}.jmx -JDISTRIBUTION=${distribution} -Jtenant=${tenant} -Jtest_name=${testName} -Jtest.type=${testType} -Jenv.type=${targetEnv} -JVUSERS=${usersCount} -JHOSTNAME=${targetUrl} -JRAMP_UP=${rampUp} -JDURATION=${duration} -Jinflux.host=${reportingInstanceUrl} \"}' -r 1 -t perfmeter -q ${loadGeneratorsCount} \
+        -c getcarrier/perfmeter:1.5 -e '{\"cmd\": \"-n -t /mnt/jmeter/${testName}.jmx -JDISTRIBUTION=${distribution} -Jtenant=${tenant} -Jtest_name=${testName} -Jtest.type=${testType} -JVUSERS=${usersCount} -JHOSTNAME=${targetUrl} -JRAMP_UP=${rampUp} -JDURATION=${duration} -Jinflux.host=${reportingInstanceUrl} \"}' -r 1 -t perfmeter -q ${loadGeneratorsCount} \
         -n supertestjob"  
-}
-
-def getInstancesCount(String targetCluster, String targetEnv){
-    def allInstances = sh([
-        script: "aws ecs list-container-instances --cluster ${targetCluster} --profile ${targetEnv} | jq [.containerInstanceArns[]]",
-        returnStdout: true
-    ]);
-    allInstances = Eval.me(allInstances)
-    return allInstances;
-}
-
-def installTelegrafAgent(String reportingInstanceUrl, String targetCluster, String targetEnv){
-    def allInstances = getInstancesCount(targetCluster, targetEnv)
-    for(i=1; i <= allInstances.size(); i++){
-        def nodeName = targetCluster + '-node-' + i;
-        sh(script: "aws ecs register-task-definition --profile ${targetEnv} --cli-input-json file://${WORKSPACE}/carrier-io/scripts/cloudformation/telegraf.json")
-        sh(script: """aws ecs start-task --profile ${targetEnv} --cluster ${targetCluster} \
-            --overrides '{ "containerOverrides": [ { "name": "busybox", "environment": [ { "name": "INFLUX_HOST", "value": "http://${reportingInstanceUrl}:8086" }, { "name": "TELEGRAF_NODE_HOSTNAME", "value": "${nodeName}" } ] } ] }' \
-            --task-definition telegraf-monitoring --container-instances ${allInstances[i-1]}""")
-    }
-}
-
-def stopMonitoringTask(String targetCluster, String targetEnv){
-    def taskArns = sh([
-        script: "aws ecs list-tasks --profile ${targetEnv} --cluster ${targetCluster} --family telegraf-monitoring | jq [.taskArns[]]",
-        returnStdout: true
-    ]);
-    taskArns = Eval.me(taskArns)
-    if(taskArns != null){
-        for(int i=0; i<taskArns.size(); i++){
-            sh(script: "aws ecs stop-task --profile ${targetEnv} --cluster ${targetCluster} --task ${taskArns[i]}")
-        }
-    }
 }
 
 def sendNotification(String testName, String testType, int users, String reportingInstanceUrl, String emailsList, String galloperTaskIdForNotifications){
@@ -126,18 +93,14 @@ node {
             if(params.populateDatabase){
                 populateData(params.tenant)
             }    
-        }
-
-        stage("Configure resources monitoring") {
-            installTelegrafAgent(params.reportingInstanceUrl, params.targetCluster, params.targetEnv)
-        }    
+        }         
 
         stage("Configure load generators") {
-            createStack(params.loadGeneratorsCount, params.instanceType, params.spotPrice, params.reportingInstanceUrl, params.targetRegion, params.lgMemory, params.targetEnv)
+            createStack(params.loadGeneratorsCount, params.instanceType, params.spotPrice, params.reportingInstanceUrl, params.targetRegion, params.lgMemory)
         }    
 
         stage("Execute tests") {
-            executePerformanceTest(params.users, params.loadGeneratorsCount, params.reportingInstanceUrl, params.galloperPostProccessingTaskId, params.testName, params.testType, params.rampUp, params.duration, params.targetUrl, params.distribution, params.targetEnv, params.lgMemory, params.artifact, params.bucket, params.tenant)
+            executePerformanceTest(params.users, params.loadGeneratorsCount, params.reportingInstanceUrl, params.galloperPostProccessingTaskId, params.testName, params.testType, params.rampUp, params.duration, params.targetUrl, params.distribution, params.lgMemory, params.artifact, params.bucket, params.tenant)
         }
 
         stage("Send Notification") {
@@ -148,8 +111,7 @@ node {
 		println err
 	} finally { 
         stage('Shut down load generators and FOLIO environment'){
-            deleteStack(STACK_NAME, params.targetRegion, params.targetEnv)
-            stopMonitoringTask(params.targetCluster, params.targetEnv)
+            deleteStack(STACK_NAME, params.targetRegion)          
         }
-	}
+   }
 }
