--- a/carrier-io/Jenkinsfile
+++ b/carrier-io/Jenkinsfile
@@ -63,7 +63,7 @@ node {
             booleanParam(name: 'populateDatabase', defaultValue: true, description: "Repopulate data to database"),
             string(defaultValue: "[TBD]", description: "Tenant", name: "tenant"),
             string(defaultValue: "1", description: "Quantity of load generators", name: "loadGeneratorsCount"),
-            choice(choices: "folio", description: "Test Name", name: "testName"),
+            string(defaultValue: "folio", description: "Test Name", name: "testName"),
             string(defaultValue: "Folio_perf_tests.zip", description: "Name of .zip file with tests", name: "artifact"),
             string(defaultValue: "tests", description: "Galloper bucket with tests artifact", name: "bucket"),
             string(defaultValue: "t3.medium", description: "Instance type for load generator, all instance types with specs could be found here https://aws.amazon.com/ec2/instance-types", name: "instanceType"),
@@ -72,11 +72,10 @@ node {
             string(defaultValue: "[TBD]", description: "FOLIO environment (Okapi URI) against which tests will be executed", name: "targetUrl"),
             string(defaultValue: "[TBD]", description: "Environment where reporting tools are located", name: "reportingInstanceUrl"),
             string(defaultValue: "", description: """Recipients for email notification in format "user1@mail.com","user2@mail.com","user3@mail.com" """, name: "emailsList"),
-            string(defaultValue: "4912116f-b22e-470c-b263-81ffbe6ce847", description: "Galloper task id for post processing", name: "galloperPostProccessingTaskId"),
-            string(defaultValue: "a6c0ff76-9abb-4021-99c9-78a02152bf1d", description: "Galloper task id for notifications", name: "galloperTaskIdForNotifications"),
+            string(defaultValue: "1df234f8-0319-4a1e-89e1-e3aec78a25dc", description: "Galloper task id for post processing", name: "galloperPostProccessingTaskId"),
+            string(defaultValue: "481d5b9d-fd90-45c6-a38f-0fad1b4d8572", description: "Galloper task id for notifications", name: "galloperTaskIdForNotifications"),
             string(defaultValue: "43-57", description: "user flow distribution", name: "distribution"),
             string(defaultValue: "us-east-1", description: "region", name: "targetRegion"),
-            string(defaultValue: "[TBD]", description: "target environment (e.g., dev/int)", name: "targetEnv"),
             string(defaultValue: "[TBD]", description: "cluster name to monitor", name: "targetCluster")
         ])
     ])
