test shutdown load generator

--- a/carrier-io/Jenkinsfile
+++ b/carrier-io/Jenkinsfile
@@ -4,7 +4,7 @@ MONITORING_STACK_NAME = "monitoring-performance-testing"
 def createStack(String loadGeneratorsCount, String instanceType, String spotPrice, String reportingInstanceUrl, String targetRegion, String lgMemory, String targetEnv){
     sh(script: "aws cloudformation --profile ${targetEnv} create-stack --stack-name ${STACK_NAME} \
         --region ${targetRegion} \
-        --template-body file://${WORKSPACE}/carrier-io/scripts/cloudformation/load_generator.yml \
+        --template-body file://${WORKSPACE}/cf-templates/cloudformation/load_generator.yml \
         --parameters ParameterKey=InstanceType,ParameterValue=${instanceType} \
         ParameterKey=SpotPrice,ParameterValue=${spotPrice} \
         ParameterKey=LoadGeneratorsCount,ParameterValue=${loadGeneratorsCount} \
@@ -14,16 +14,22 @@ def createStack(String loadGeneratorsCount, String instanceType, String spotPric
 } 
 
 def populateData(String tenant){
-    sh(script: "unzip [TBD - dataset zip]")
+    sh(script: "unzip dataset.zip")
     sh(script: "apt-get install uuid-runtime")
     sh(script: "apt-get install -y postgresql postgresql-contrib")
     sh(script: "apt-get install -y jq")
-    sh(script: "[TBD]")
+    sh(script: "cd ${WORKSPACE}/dataset/ && bin/populate.sh manifests/Springfield.manifest db.conf ${tenant} && cd ..")
 }
 
 def deleteStack(String stackName, String targetRegion, String targetEnv){
-    sh(script: "aws cloudformation --profile ${targetEnv} delete-stack --stack-name ${stackName} --region ${targetRegion}")
-    sh(script: "aws cloudformation --profile ${targetEnv} wait stack-delete-complete --stack-name ${stackName} --region ${targetRegion}")
+	try{
+	    sh(script: "aws cloudformation --profile ${targetEnv} delete-stack --stack-name ${stackName} --region ${targetRegion}")
+	    sh(script: "aws cloudformation --profile ${targetEnv} wait stack-delete-complete --stack-name ${stackName} --region ${targetRegion}")
+	} catch (Exception err){
+            println err
+    	    sh(script: "aws cloudformation --profile ${targetEnv} delete-stack --stack-name ${stackName} --region ${targetRegion}")
+	    sh(script: "aws cloudformation --profile ${targetEnv} wait stack-delete-complete --stack-name ${stackName} --region ${targetRegion}")
+        }
 }
 
 def executePerformanceTest(String users, String loadGeneratorsCount, String reportingInstanceUrl, String galloperPostProccessingTaskId, String testName, String testType, String rampUp, String duration, String targetUrl, String distribution, String targetEnv, String lgMemory, String artifact, String bucket, String tenant){
@@ -57,7 +63,7 @@ def installTelegrafAgent(String reportingInstanceUrl, String targetCluster, Stri
     def allInstances = getInstancesCount(targetCluster, targetEnv)
     for(i=1; i <= allInstances.size(); i++){
         def nodeName = targetCluster + '-node-' + i;
-        sh(script: "aws ecs register-task-definition --profile ${targetEnv} --cli-input-json file://${WORKSPACE}/carrier-io/scripts/cloudformation/telegraf.json")
+        sh(script: "aws ecs register-task-definition --profile ${targetEnv} --cli-input-json file://${WORKSPACE}/cf-templates/cloudformation/telegraf.json")
         sh(script: """aws ecs start-task --profile ${targetEnv} --cluster ${targetCluster} \
             --overrides '{ "containerOverrides": [ { "name": "busybox", "environment": [ { "name": "INFLUX_HOST", "value": "http://${reportingInstanceUrl}:8086" }, { "name": "TELEGRAF_NODE_HOSTNAME", "value": "${nodeName}" } ] } ] }' \
             --task-definition telegraf-monitoring --container-instances ${allInstances[i-1]}""")
@@ -93,29 +99,28 @@ node {
             string(defaultValue: "1", description: "vUsers count for test execution", name: "users"),
             string(defaultValue: "1", description: "Ramp up, s", name: "rampUp"),
             string(defaultValue: "60", description: "Test duration, s", name: "duration"),
-            booleanParam(name: 'populateDatabase', defaultValue: true, description: "Repopulate data to database"),
-            string(defaultValue: "[TBD]", description: "Tenant", name: "tenant"),
+            booleanParam(name: 'populateDatabase', defaultValue: false, description: "Repopulate data to database"),
+            string(defaultValue: "fs09000000", description: "Tenant", name: "tenant"),
             string(defaultValue: "1", description: "Quantity of load generators", name: "loadGeneratorsCount"),
-            choice(choices: "folio", description: "Test Name", name: "testName"),
-            string(defaultValue: "Folio_perf_tests.zip", description: "Name of .zip file with tests", name: "artifact"),
+            string(defaultValue: "", description: "Test Name", name: "testName"),
+            string(defaultValue: "inventory-users.zip", description: "Name of .zip file with tests", name: "artifact"),
             string(defaultValue: "tests", description: "Galloper bucket with tests artifact", name: "bucket"),
             string(defaultValue: "t3.medium", description: "Instance type for load generator, all instance types with specs could be found here https://aws.amazon.com/ec2/instance-types", name: "instanceType"),
             string(defaultValue: "0.0125", description: "The maximum hourly price to be paid for any Spot Instance launched to fulfill the request. Default is for t3.medium instance type, more information could be found here https://aws.amazon.com/ec2/spot/pricing", name: "spotPrice"),
             string(defaultValue: "3", description: "Ram memory in GB avaliable per load generator", name: "lgMemory"),
-            string(defaultValue: "[TBD]", description: "FOLIO environment (Okapi URI) against which tests will be executed", name: "targetUrl"),
-            string(defaultValue: "[TBD]", description: "Environment where reporting tools are located", name: "reportingInstanceUrl"),
+            string(defaultValue: "okapi-fcp1-us-east-1.int.aws.folio.org", description: "Environment against which tests will be executed", name: "targetUrl"),
+            string(defaultValue: "ec2-54-165-58-65.compute-1.amazonaws.com", description: "Environment where reporting tools are located", name: "reportingInstanceUrl"),
             string(defaultValue: "", description: """Recipients for email notification in format "user1@mail.com","user2@mail.com","user3@mail.com" """, name: "emailsList"),
             string(defaultValue: "4912116f-b22e-470c-b263-81ffbe6ce847", description: "Galloper task id for post processing", name: "galloperPostProccessingTaskId"),
             string(defaultValue: "a6c0ff76-9abb-4021-99c9-78a02152bf1d", description: "Galloper task id for notifications", name: "galloperTaskIdForNotifications"),
             string(defaultValue: "43-57", description: "user flow distribution", name: "distribution"),
             string(defaultValue: "us-east-1", description: "region", name: "targetRegion"),
-            string(defaultValue: "[TBD]", description: "target environment (e.g., dev/int)", name: "targetEnv"),
-            string(defaultValue: "[TBD]", description: "cluster name to monitor", name: "targetCluster")
+            string(defaultValue: "int", description: "target environment (e.g., dev/int)", name: "targetEnv"),
+            string(defaultValue: "fcp1-pvt", description: "cluster name to monitor", name: "targetCluster")
         ])
     ])
 
     try {
-
 	    stage("Checkout") {
             deleteDir()
             step([$class: 'WsCleanup'])
@@ -143,13 +148,12 @@ node {
         stage("Send Notification") {
             sendNotification(params.testName, params.testType, params.users.toInteger(), params.reportingInstanceUrl, params.emailsList, params.galloperTaskIdForNotifications)
         }
-		
+
+        stage('Shut down load generators and FOLIO environment') {
+            stopMonitoringTask(params.targetCluster, params.targetEnv)
+            deleteStack(STACK_NAME, params.targetRegion, params.targetEnv)
+        }
     } catch (Exception err){
 		println err
-	} finally { 
-        stage('Shut down load generators and FOLIO environment'){
-            deleteStack(STACK_NAME, params.targetRegion, params.targetEnv)
-            stopMonitoringTask(params.targetCluster, params.targetEnv)
-        }
 	}
 }
